# monster

./: README.md
archive/: README.md
getting-started/: README.md  clone-repositories  install-tools  setup-vault
getting-started/pages/: dev-setup.md  group-team-setup.md  new-broadies.md  reading-list.md
getting-started/scripts/: clone-repositories  install-tools  login  setup-graal  setup-vault
tech-docs/: README.md
tech-docs/devops/: README.md  motivation.md  requirements.md  strategy.md
tech-docs/stack/: README.md  languages.md  systems.md  tools.md
templates/python-project/: README.md  mypy.ini  pyproject.toml
templates/python-project/.github/workflows/: validate-python-subdirectory.yaml  validate-python.yaml
templates/python-project/example_package/: team.py
templates/python-project/example_package/tests/: test_team.py
